--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
 services:
 
+  cockroach:
+    image: cockroachdb/cockroach:v24.1.5
+    command: start-single-node --insecure
+
   docker-in-docker:
     image: docker:dind
     privileged: true
