--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           images: baker
 
+      - name: docker compose
+        run: docker compose up -d
+
       - name: golangci-lint cache
         uses: actions/cache@v4
         with:
