--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,8 @@
 services:
 
-  docker-in-docker:
-    image: docker:dind
-    privileged: true
+  postgres:
+    image: postgres:17
     environment:
-      DOCKER_TLS_CERTDIR: ""
-    expose:
-      - 2375
-
-  baker:
-    build: .
-    image: baker:build
-    depends_on:
-      - docker-in-docker
-    environment:
-      DOCKER_HOST: tcp://docker-in-docker:2375
-    tty: true
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: database
