--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,6 @@ jobs:
         with:
           images: baker
 
-      - name: docker compose
-        run: docker compose up -d
-
       - name: golangci-lint cache
         uses: actions/cache@v4
         with:
@@ -56,6 +53,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: prepare test environment
+        run: |
+          docker compose up -d postgres
+          GATEWAY_IP=$(docker inspect $(docker compose ps --format json | jq -r '.Name') | jq -r '.[].NetworkSettings.Networks.baker_default.Gateway')
+          echo "DATABASE_URL=postgres://user:password@$GATEWAY_IP:2345/database" >> $GITHUB_ENV
 
       - name: build image
         uses: docker/bake-action@v5
