--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,30 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
+      - name: ensure cache directories exist
+        run: |
+          mkdir -p /tmp/.docker-compose-cache
+
+      - name: cache docker compose images
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.docker-compose-cache
+          key: ${{ runner.os }}-docker-compose-${{ hashFiles('docker-compose.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-compose-
+
+      - name: pull and cache postgres image
+        if: steps.docker-compose-cache.outputs.cache-hit != 'true'
+        run: |
+          docker pull postgres:17
+          docker save -o /tmp/.docker-compose-cache/postgres.tar postgres:17
+
+      - name: Load cached Postgres image
+        run: |
+          if [ -f "/tmp/.docker-compose-cache/postgres.tar" ]; then
+            docker load -i /tmp/.docker-compose-cache/postgres.tar
+          fi
+
       - name: prepare test environment
         run: |
           docker compose up -d postgres
