--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,21 +72,22 @@ jobs:
           GATEWAY_IP=$(docker inspect $(docker compose ps --format json | jq -r '.Name') | jq -r '.[].NetworkSettings.Networks.baker_default.Gateway')
           echo "DATABASE_URL=postgres://user:password@$GATEWAY_IP:2345/database" >> $GITHUB_ENV
 
+      - name: push baker:build image
+        uses: docker/bake-action@v5
+        with:
+          targets: build
+          push: ${{ github.ref == 'refs/heads/main'}}
+
+      - name: build and push baker:latest image
+        if: github.ref == 'refs/heads/main'
+        uses: docker/bake-action@v5
+        with:
+          targets: release
+          push: true
+
       - name: Post inject docker compose cache into docker
         run: |
           if [ ! -f /tmp/.docker-compose-cache/postgres.tar ]; then
             mkdir -p /tmp/.docker-compose-cache
             docker save -o /tmp/.docker-compose-cache/postgres.tar postgres
           fi
-
-      - name: build image
-        uses: docker/bake-action@v5
-        with:
-          push: ${{ github.ref == 'refs/heads/main'}}
-
-      - name: release image
-        if: github.ref == 'refs/heads/main'
-        uses: docker/bake-action@v5
-        with:
-          targets: release
-          push: true
