--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,13 +72,13 @@ jobs:
           GATEWAY_IP=$(docker inspect $(docker compose ps --format json | jq -r '.Name') | jq -r '.[].NetworkSettings.Networks.baker_default.Gateway')
           echo "DATABASE_URL=postgres://user:password@$GATEWAY_IP:2345/database" >> $GITHUB_ENV
 
-      - name: bake build target
+      - name: docker bake build target
         uses: docker/bake-action@v5
         with:
           targets: build
           push: ${{ github.ref == 'refs/heads/main'}}
 
-      - name: bake release target
+      - name: docker bake release target
         if: github.ref == 'refs/heads/main'
         uses: docker/bake-action@v5
         with:
