--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,12 +72,21 @@ jobs:
           GATEWAY_IP=$(docker inspect $(docker compose ps --format json | jq -r '.Name') | jq -r '.[].NetworkSettings.Networks.baker_default.Gateway')
           echo "DATABASE_URL=postgres://user:password@$GATEWAY_IP:2345/database" >> $GITHUB_ENV
 
-      - name: docker bake build target
+      - name: docker bake build
         uses: docker/bake-action@v5
         with:
-          push: ${{ github.ref == 'refs/heads/main'}}
+          push: false
 
-      - name: docker bake release target
+      - name: docker bake push build
+        if: github.ref == 'refs/heads/main'
+        uses: docker/bake-action@v5
+        with:
+          targets: build
+          push: true
+          set: |
+            *.cache-to=type=registry,ref=lopezator/baker:build
+
+      - name: docker bake push release
         if: github.ref == 'refs/heads/main'
         uses: docker/bake-action@v5
         with:
