--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,6 @@ jobs:
 
       - name: inject docker cache into docker
         run: |
-          mkdir -p /tmp/.docker-cache
           if [ -f /tmp/.docker-cache/postgres.tar ]; then
             docker load -i /tmp/.docker-cache/postgres.tar
           fi
@@ -73,7 +72,7 @@ jobs:
       - name: docker bake build
         uses: docker/bake-action@v5
         with:
-          push: false
+          push: ${{ github.ref == 'refs/heads/main'}}
 
       - name: docker bake push release
         if: github.ref == 'refs/heads/main'
@@ -81,3 +80,13 @@ jobs:
         with:
           targets: release
           push: true
+
+      - name: Post inject docker cache into docker
+        run: |
+          mkdir -p /tmp/.docker-cache
+          if [ ! -f /tmp/.docker-cache/postgres.tar ]; then
+            docker save -o /tmp/.docker-cache/postgres.tar postgres
+          fi
+          if [ ! -f /tmp/.docker-cache/golang.tar ]; then
+            docker save -o /tmp/.docker-cache/golang.tar golang
+          fi
